FIX: The outliner should be left aligned.
This regression appeared only on the production version.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -354,6 +354,7 @@ ul.Outliner,
 .Outliner li {
   list-style-type: none;
   min-height: 2em;
+  text-align: left;
 }
 
 .Outliner li.dragged {
